--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 				<a href="/"><span>Web</span>Studio</a>
 				<!-- menu -->
 				<ul>
-					<li><a href="/studio">Studio</a></li>
-					<li><a href="/portfolio">Portfolio</a></li>
-					<li><a href="/contacts">Contacts</a></li>
+					<li><a href="./index.html">Studio</a></li>
+					<li><a href="./portfolio.html">Portfolio</a></li>
+					<li><a href="#">Contacts</a></li>
 				</ul>
 			</nav>
 			<!-- contacts -->
@@ -33,8 +33,9 @@
 					<button type="button">Order Service</button>
 				</section>
 			</div>
-			<!-- quality-->
+			<!-- skills-->
 			<section>
+				<h2>Our skills</h2>
 				<ul>
 					<li>
 						<h3>Strategy</h3>
